force-app/main/default/objects/vlocity_ps__ScreeningRule__c/vlocity_ps__ScreeningRule__c.object-meta.xml
<CustomObject>
    <label>Screening Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>