force-app/main/default/objects/vlocity_ps__ScreeningRule__c/fields/vlocity_ps__PriorityOrder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PriorityOrder__c</fullName>
    <label>Priority Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>