force-app/main/default/objects/vlocity_ps__ScreeningRule__c/fields/vlocity_ps__RuleDetail__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RuleDetail__c</fullName>
    <label>Rule Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>