force-app/main/default/objects/vlocity_ps__ScreeningRule__c/fields/vlocity_ps__ScreeningRuleGroupId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ScreeningRuleGroupId__c</fullName>
    <label>Screening Rule Group</label>
    <referenceTo>vlocity_ps__ScreeningRuleGroup__c</referenceTo>
    <relationshipLabel>Screening Rules</relationshipLabel>
    <relationshipName>ScreeningRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>