force-app/main/default/objects/vlocity_ps__ScreeningRule__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__RuleDetail__c</columns>
    <columns>vlocity_ps__Validator__c</columns>
    <columns>vlocity_ps__PriorityOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>